--- a/index.html
+++ b/index.html
@@ -68,7 +68,10 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="/socket.io/socket.io.js"></script><script type="text/javascript" src="cuckoo.vendor.min.js" defer="defer"></script><script type="text/javascript" src="cuckoo.min.js" defer="defer"></script><!--[if lt IE 9]>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
+    <script type="text/javascript" src="cuckoo.vendor.min.js" defer="defer"></script>
+    <script type="text/javascript" src="cuckoo.min.js" defer="defer"></script>
+    <!--[if lt IE 9]>
     <script src="//cdnjs.cloudflare.com/ajax/libs/nwmatcher/1.3.6/nwmatcher.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/selectivizr/1.0.2/selectivizr-min.js"></script>
     <![endif]-->
